change / to ./ for assests

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/output.css" />
+    <link rel="stylesheet" href="./output.css" />
     <!-- displays site properly based on user's device -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Alata&display=swap"
       rel="stylesheet"
     />
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,7 +34,7 @@
 
     <div
       class="relative h-screen w-screen bg-cover bg-center"
-      style="background-image: url('/images/desktop/image-hero.jpg')"
+      style="background-image: url('./images/desktop/image-hero.jpg')"
     >
       <!-- mobile menu -->
       <div
@@ -43,12 +43,12 @@
       >
         <div class="relative top-12">
           <div class="absolute md:left-36 left-16">
-            <img src="/images/logo.svg" alt="logo" />
+            <img src="./images/logo.svg" alt="logo" />
           </div>
 
           <div id="close" class="absolute right-8 flex">
             <img
-              src="/images/icon-close.svg"
+              src="./images/icon-close.svg"
               alt="mobile-menu"
               width="35"
               class="hover:cursor-pointer"
@@ -69,12 +69,12 @@
 
       <div class="relative top-12">
         <div class="absolute md:left-36 left-16">
-          <img src="/images/logo.svg" alt="logo" />
+          <img src="./images/logo.svg" alt="logo" />
         </div>
 
         <div id="show" class="md:hidden absolute right-8 flex">
           <img
-            src="/images/icon-hamburger.svg"
+            src="./images/icon-hamburger.svg"
             alt="mobile-menu"
             width="35"
             class="hover:cursor-pointer"
@@ -132,7 +132,7 @@
     <div class="relative md:flex bg-white w-screen">
       <div class="relative mt-20 md:px-8 px-16 md:my-24 md:ml-36">
         <img
-          src="/images/desktop/image-interactive.jpg"
+          src="./images/desktop/image-interactive.jpg"
           alt="interactive"
           width="800px"
         />
@@ -177,7 +177,7 @@
       <div class="grid grid-flow-row grid-cols-4 gap-16 grid-rows-2 px-36">
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-deep-earth.jpg"
+            src="./images/desktop/image-deep-earth.jpg"
             alt=""
             class="group-hover:opacity-50"
           />
@@ -199,7 +199,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-night-arcade.jpg"
+            src="./images/desktop/image-night-arcade.jpg"
             alt=""
             class="group-hover:opacity-50"
           />
@@ -221,7 +221,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-grid.jpg"
+            src="./images/desktop/image-grid.jpg"
             alt=""
             class="group-hover:opacity-50"
           />
@@ -243,7 +243,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-from-above.jpg "
+            src="./images/desktop/image-from-above.jpg "
             alt=""
             class="group-hover:opacity-50"
           />
@@ -265,7 +265,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-pocket-borealis.jpg "
+            src="./images/desktop/image-pocket-borealis.jpg "
             alt=""
             class="group-hover:opacity-50"
           />
@@ -287,7 +287,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-curiosity.jpg "
+            src="./images/desktop/image-curiosity.jpg "
             alt=""
             class="group-hover:opacity-50"
           />
@@ -309,7 +309,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-fisheye.jpg "
+            src="./images/desktop/image-fisheye.jpg "
             alt=""
             class="group-hover:opacity-50"
           />
@@ -331,7 +331,7 @@
         </div>
         <div class="overflow-hidden relative group">
           <img
-            src="/images/desktop/image-soccer-team.jpg "
+            src="./images/desktop/image-soccer-team.jpg "
             alt=""
             class="group-hover:opacity-50"
           />
@@ -367,7 +367,7 @@
         >
           <img
             class="group-hover:opacity-50"
-            src="/images/mobile/image-deep-earth.jpg"
+            src="./images/mobile/image-deep-earth.jpg"
             alt=""
           />
           <p
@@ -385,7 +385,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-night-arcade.jpg "
+            src="./images/mobile/image-night-arcade.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -404,7 +404,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-soccer-team.jpg "
+            src="./images/mobile/image-soccer-team.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -423,7 +423,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-grid.jpg "
+            src="./images/mobile/image-grid.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -442,7 +442,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-from-above.jpg "
+            src="./images/mobile/image-from-above.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -461,7 +461,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-pocket-borealis.jpg "
+            src="./images/mobile/image-pocket-borealis.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -480,7 +480,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-curiosity.jpg "
+            src="./images/mobile/image-curiosity.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -499,7 +499,7 @@
           class="relative group before:bg-gradient-to-r before:from-black before:hover:bg-none before:block before:absolute before:w-24 before:h-full before:bottom-0"
         >
           <img
-            src="/images/mobile/image-fisheye.jpg "
+            src="./images/mobile/image-fisheye.jpg "
             alt=""
             class="group-hover:opacity-50 -z-20"
           />
@@ -532,7 +532,7 @@
       <div>
         <div>
           <img
-            src="/images/logo.svg"
+            src="./images/logo.svg"
             alt="mini logo"
             width="150"
             class="mb-8 md:ml-0 mx-auto"
@@ -578,7 +578,7 @@
         <div class="flex justify-center space-x-6 mb-8">
           <div class="group">
             <img
-              src="/images/icon-facebook.svg"
+              src="./images/icon-facebook.svg"
               alt="icon-facebook"
               class="group-hover:cursor-pointer"
             />
@@ -588,7 +588,7 @@
           </div>
           <div class="group">
             <img
-              src="/images/icon-twitter.svg"
+              src="./images/icon-twitter.svg"
               alt="icon-facebook"
               class="group-hover:cursor-pointer"
             />
@@ -598,7 +598,7 @@
           </div>
           <div class="group">
             <img
-              src="/images/icon-pinterest.svg"
+              src="./images/icon-pinterest.svg"
               alt="icon-facebook"
               class="group-hover:cursor-pointer"
             />
@@ -608,7 +608,7 @@
           </div>
           <div class="group">
             <img
-              src="/images/icon-instagram.svg"
+              src="./images/icon-instagram.svg"
               alt="icon-facebook"
               class="group-hover:cursor-pointer"
             />
